import "google/protobuf/empty.proto";
syntax = "proto3";

package user;

service UserService {
  rpc Create (User) returns (User);
  rpc FindAll(google.protobuf.Empty) returns (stream User);
  rpc Update ( UpdateUser) returns (User);
  rpc FindOne ( UserById) returns (User);
  rpc Remove ( UserById) returns (google.protobuf.Empty);
}

message UserById {
  int32 id = 1;
}

message User {
  int32 id = 1;
  string name = 2;
}

message UpdateUser {
  int32 id = 1;
  User body = 2;
}